--- a/app/src/main/res/layout/fragment_beta_info.xml
+++ b/app/src/main/res/layout/fragment_beta_info.xml
@@ -248,6 +248,9 @@
             android:text="@string/learn_more"
             android:textColor="@color/on_surface_variant"
             android:minHeight="56dp"
+            app:icon="@drawable/ic_arrow_up_right"
+            app:iconGravity="textEnd"
+            app:iconTint="@color/on_surface_variant"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="@id/guideline_buttons"
             app:layout_constraintEnd_toStartOf="@+id/btn_start_testing"
