fix pressed states layouts in landscape help fragment

--- a/app/src/main/res/layout-land/fragment_help.xml
+++ b/app/src/main/res/layout-land/fragment_help.xml
@@ -58,7 +58,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="64dp"
                         android:orientation="horizontal"
-                        android:background="@drawable/bg_config_item"
+                        android:background="@drawable/bg_config_item_top_curve"
                         android:weightSum="1"
                         android:clickable="true"
                         android:focusable="true"
@@ -97,7 +97,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="64dp"
                         android:orientation="horizontal"
-                        android:background="@drawable/bg_config_item"
+                        android:background="@drawable/bg_config_item_square"
                         android:weightSum="1"
                         android:clickable="true"
                         android:focusable="true"
@@ -131,7 +131,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="64dp"
                         android:orientation="horizontal"
-                        android:background="@drawable/bg_config_item"
+                        android:background="@drawable/bg_config_item_bottom_curve"
                         android:weightSum="1"
                         android:clickable="true"
                         android:focusable="true"
