--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -5,7 +5,7 @@
     android:viewportWidth="108"
     android:viewportHeight="108">
   <path
-      android:pathData="m0,0h108v108h-108z">
+      android:pathData="M0,0h108v108h-108z">
     <aapt:attr name="android:fillColor">
       <gradient 
           android:startX="54"
