--- a/app/src/main/res/layout-land/fragment_iconsetting.xml
+++ b/app/src/main/res/layout-land/fragment_iconsetting.xml
@@ -14,7 +14,6 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
         android:background="@color/surface"
         tools:context="org.torproject.vpn.ui.approuting.AppRoutingFragment">
 
@@ -24,7 +23,7 @@
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
             android:theme="@style/Theme.TorVPN.AppBarOverlay"
-            app:liftOnScroll="false"
+            app:liftOnScroll="true"
             app:elevation="0dp"
             >
 
