--- a/app/src/main/res/layout-land/fragment_bridgesettings.xml
+++ b/app/src/main/res/layout-land/fragment_bridgesettings.xml
@@ -18,14 +18,14 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
         android:background="@color/surface">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/app_bar"
+            android:fitsSystemWindows="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:liftOnScroll="false"
+            app:liftOnScroll="true"
             app:elevation="0dp"
             android:theme="@style/Theme.TorVPN.AppBarOverlay">
             <com.google.android.material.appbar.MaterialToolbar
@@ -44,6 +44,7 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/ll_content_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
