Handle cutout areas correctly in: * AppRoutingFragment * BridgeSettingsFragment * ConfigureFragment * OfflineHelpFragment * LoggingFragment

--- a/app/src/main/res/layout/fragment_offline_help.xml
+++ b/app/src/main/res/layout/fragment_offline_help.xml
@@ -33,6 +33,7 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             >
             <FrameLayout
+                android:id="@+id/wv_help_container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <WebView
