--- a/app/src/main/res/layout-land/fragment_bridgebot.xml
+++ b/app/src/main/res/layout-land/fragment_bridgebot.xml
@@ -186,7 +186,7 @@
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/tv_action_btn"
-            style="@style/Widget.Material3.Button"
+            style="@style/material_button"
             android:layout_width="0dp"
             android:layout_height="52dp"
             app:layout_constraintBottom_toBottomOf="parent"
